# creditcoin-loadtest

./: Cargo.toml  README.md  creditcoin-metadata.scale
src/: main.rs
