[package]
name = "creditcoin-stress-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.15.2"
parity-scale-codec = "3.0.0"
rand = "0.8.5"
sp-keyring = "6.0.0"
subxt = "0.18.1"
tokio = { version = "1.17.0", features = ["full"] }
